[package]
name = "middle-example-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# middle_wasm = { git = "https://github.com/Middle-dev/middle-wasm.git", tag = "v0.0.3b" }
middle_wasm = { path = "../middle-wasm" }
serde = { version = "1.0.164", features = ["derive"] }
schemars = "0.8.12"
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true